# Describer-with-ai

./: .gitignore  README.md  pyproject.toml
discover_agent/: __init__.py  __main__.py  agent.py  bridge.py  memory.py
memory/: heuristics.md
